navbar - zruseni 410px breakpointu - display flex     - fixne vertical alignment issue

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -24,7 +24,8 @@ button:not(:disabled) {
 .topnav {
     overflow: hidden;
     background-color: var(--secondary-color);
-    height: 3.1rem;
+    align-items: center;
+    display: flex;
 }
 
 .topnav a {
@@ -68,6 +69,7 @@ button:not(:disabled) {
 
 .topnav .icon {
     display: none;
+    margin-left: auto;
 }
 
 .topnav-right {
@@ -207,6 +209,7 @@ footer {
 
     .topnav.responsive {
         position: relative;
+        display: block;
     }
 
     .topnav.responsive .icon {
@@ -225,7 +228,7 @@ footer {
     }
 
     .topnav a.logo {
-        font-size: 20px;
+        font-size: 18px;
         padding: 11px 20px 8px 3px;
         padding-right: 10px;
         margin-right: 10px;
@@ -244,16 +247,12 @@ footer {
     }
 }
 
-@media screen and (max-width: 410px) {
+/* @media screen and (max-width: 410px) {
     .topnav-links a {
         display: none;
     }
 
-    .topnav a.logo {
-        font-size: 19px;
-        padding-right: 10px;
-    }
     .topnav .icon {
         padding-left: 0;
     }
-}
+} */
